--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
-.navbar{
-    height: 96px;
+/* .navbar{
+    height: 100%;
     width: 100%;
     background: linear-gradient(to right,RED,
     ORANGE
@@ -16,12 +16,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 60px;
+    padding: 0px 0px;
 
 
 }
 .icones{
-    height: 64px;
+    height: 35px;
     width: auto;
     margin-top: 9px;
 
@@ -30,7 +30,7 @@
 section{
     background-image: url(../IMG/alimento-almoco-burrito-461198.jpg);
     width: 100%;
-    height: 500px;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -74,4 +74,4 @@ h1 {
  .prod div img{
     height: 150px;
     width: auto;
- }   
+ }    */
