--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-/* .navbar{
+.navbar{
     height: 100%;
     width: 100%;
     background: linear-gradient(to right,RED,
@@ -74,4 +74,4 @@ h1 {
  .prod div img{
     height: 150px;
     width: auto;
- }    */
+ }   
