--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,77 +1,31 @@
+
+header{
+   height:100px;
+}
 .navbar{
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(to right,RED,
+   padding: 10px;
+   height: 100%;
+   width: 100%;
+      background: linear-gradient(to right,RED,
     ORANGE
     ,
     YELLOW
     ,
-    GREEN
-    ,
-    BLUE
-    ,
-    INDIGO
-    ,
-    VIOLET);
+    GREEN);
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 0px 0px;
-
+}
+h1{
+   color: white;
+   font-size: x-large;
+}
+.navbar div{
+   padding: 10px;
+   width: 70%;
+   
 
 }
 .icones{
-    height: 35px;
-    width: auto;
-    margin-top: 9px;
+   width: 55px;
 
 }
-
-section{
-    background-image: url(../IMG/alimento-almoco-burrito-461198.jpg);
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-h1 {
-    color:white;  
-    font-family: sans-serif;
-    font-size: 70pt;
-    font-weight: 700;
-    text-shadow: 0px 0px 20px black;
- 
-  }
- .prod{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    padding: 100px;
-  
- }
- .prod div{
-    width: 150px;
-    height: 150px;
-    margin: 10px;
-    overflow: hidden;
-    border-radius: 30px;
-    box-shadow: 3px 3px 15px white;
-    cursor: -moz-grab;
-    transition: .3s;
-    cursor: pointer;
- 
- }
- .prod div:hover{
-    transform: scale(1.5);
-    border-radius: 75px;
- 
- }
- .prod div img{
-    height: 150px;
-    width: auto;
- }   
