--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
    padding: 10px;
    height: 100%;
    width: 100%;
-   background: linear-gradient(to right, RED,ORANGE, YELLOW, GREEN);
+   background: linear-gradient(to right, RED, ORANGE, YELLOW, GREEN);
    display: flex;
    justify-content: space-between;
    position: fixed;
@@ -13,7 +13,8 @@
    display: flex;
    justify-content: space-between;
 }
-.navbar div{
+
+.navbar div {
    height: 100%;
    padding: 10px;
    display: flex;
@@ -21,24 +22,52 @@
    align-items: center;
 
 }
-.navbar img{
+
+.navbar img {
    height: 50px;
 }
 
-/* SELECAO DE PRODUTO */
+.navbar h1 {
+   color: white;
+}
 
-.section-selecao{
+
+
+/* SELECAO DE PRODUTO */
+.section-selecao {
    margin-top: 70px;
-   display: flex;
-   flex-wrap: wrap;
    padding: 20px;
-   justify-content: space-between;  
- 
 
 }
-.section-selecao div{
-   height: 150px;
-   width: 150px;
-   border:1px solid red;
 
+.section-selecao div div {
+   height: 50px;
+   margin: solid, red, 2px;
+
+}
+
+.variavel {
+   background: linear-gradient(to right, green, yellow);
+   margin: 5px;
+   color: white;
+   font-size: 20pt;
+   border-radius: 10px;
+
+}
+.typeP{
+   padding: 20px;
+}
+
+.type {
+   font-size: 10pt;
+   display: flex;
+   justify-content: space-between;
+   padding: 20px;
+   border-radius: 5px;
+}
+.type input {
+   height: 32px;
+   width: 32px;
+   background: url(../img/plus-symbol-in-a-rounded-black-square.png) no-repeat right top;
+   
 }
