--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,18 @@
-/* NAVBAR GERAL */
-.navbar {
-   padding: 10px;
+/* GERAL */
+body,
+html {
+   position: relative;
    height: 100%;
-   width: 100%;
+}
+
+.navbar {
    background: linear-gradient(to right, RED, ORANGE, YELLOW, GREEN);
    display: flex;
    justify-content: space-between;
-   position: fixed;
-   top: 0%;
-   width: 100%;
-   height: 64px;
-   display: flex;
-   justify-content: space-between;
-}
-
-.navbar div {
-   height: 100%;
    padding: 10px;
-   display: flex;
-   justify-content: center;
+   height: 64px;
+   text-align: center;
    align-items: center;
-
 }
 
 .navbar img {
@@ -29,80 +21,161 @@
 
 .navbar h1 {
    color: white;
+   font-family: sans-serif;
+   font-size: 25pt;
+   text-shadow: 0 0 15px #000;
 }
 
-
-
-/* SELECAO DE PRODUTO */
-.variavel {
-   padding: 5px;
-}
-
-.section-selecao {
-
-   margin-top: 70px;
-   padding: 20px;
-
-}
-
-.type-massa {
-   padding:5px;
-}
-
-.section-selecao div div {
-   height: 50px;
-   margin: solid, red, 2px;
-
-}
-
-.variavel {
-   background: linear-gradient(to right, green, yellow);
-   margin: 5px;
-   color: white;
-   font-size: 20pt;
-   border-radius: 10px;
-
-}
-
-.typeP {
-   padding: 20px;
-}
-
-.type {
-   font-size: 20pt;
-   display: flex;
-   justify-content: space-between;
-   padding: 10px;
-   border-radius: 5px;
-}
-
-.type input {
-   height: 32px;
-   width: 32px;
-   background: url(../img/plus-symbol-in-a-rounded-black-square.png) no-repeat right top;
-
+section {
+   margin: auto;
+   width: 95%;
+   height: 100%;
+   background-color: rgb(224, 197, 197)
 }
 
 /* MENU */
-#menu {
-   display: none;
-   position: absolute;
-   height: 100%;
-   width: 100%;
+
+.section-menu {
+   display: flex;
+   justify-content: space-evenly;
+   flex-wrap: wrap;
 
 }
 
-#menu .abaMenu {
+.section-menu div {
+   margin: 10px;
+   display: flex;
    width: 80%;
-   height: 100%;
-   background-color: white;
+   height: 200px;
+   justify-content: center;
+   overflow: hidden;
+}
+
+.section-menu div img {
+   object-fit: contain;
 
 }
 
-#menu .foraMenu {
+/* drawer */
+
+.drawer {
+   position: absolute;
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   background: rgba(0, 0, 0, .3);
+   top: 0;
+   left: 0;
+   display: none;
+   color: white;
+   text-shadow: 0 0 15px #000;
+}
+
+.drawer .drawer-menu {
+   background: linear-gradient(to right, RED, ORANGE, YELLOW);
+   height: 100%;
+   width: 80%;
+   animation: abrir-menu 1s;
+}
+
+.drawer .drawer-close {
    width: 20%;
    height: 100%;
-   background-color: black;
-   opacity: 0.4;
+}
 
+.drawer .drawer-menu-close {
+   padding: 20px;
+}
+
+.drawer .drawer-menu-close img {
+   width: 20px;
+   float: right;
+}
+
+.drawer .drawer-title {
+   padding: 20px;
+   font-size: 20pt;
+}
+
+.drawer-menu .menu-itens {
+   padding: 40px;
+}
+
+.drawer-menu .menu-itens div {
+   margin-top: 20px;
+}
+
+.drawer-menu .menu-itens a {
+   color: white;
+   text-decoration: none;
+}
+
+/* ANIMAÇÕES */
+
+@keyframes abrir-menu {
+   0% {
+      margin-left: -80%;
+   }
+
+   100% {
+      margin-left: 0%;
+   }
+}
+
+@keyframes fechar-menu {
+   0% {
+      margin-left: 0%;
+   }
+
+   100% {
+      margin-left: -80%;
+   }
+}
+
+@keyframes clarear-div {
+   0% {
+      background: rgba(0, 0, 0, .5);
+   }
+
+   100% {
+      background-color: rgb(0, 0, 0, .0);
+   }
+
+}
+
+@keyframes escurecer-div {
+   0% {
+      background-color: rgb(0, 0, 0, .0);
+   }
+
+   100% {
+      background: rgba(0, 0, 0, .5);
+   }
+
+
+
+}
+
+@keyframes zoom-in {
+   0% {
+      transform: scale(1);
+      opacity: 1;
+   }
+
+   100% {
+      transform: scale(3);
+      opacity: 0;
+   }
+}
+
+@keyframes zoom-out {
+   0% {
+      transform: scale(3);
+      opacity: .6;
+   }
+
+   100% {
+      transform: scale(1);
+      opacity: 1;
+   }
 }
